# echo

./: .gitignore  3  :w  CMakeCache.txt  CMakeLists.txt  Makefile  \  ]  cmake_install.cmake  compile_commands.json  imgui.ini  sandbox
.cache/clangd/index/: context.c.32E331AAD38149F3.idx  egl_context.c.4A7E9FC573687912.idx  fractional-scale-v1-client-protocol.h.99215C9A0BC8CBD4.idx  glad.c.21E8E5813B0E442E.idx  glad.h.8A7C52AA1ADC3459.idx  glfw3.h.1E5B488600C6FDB2.idx  glfw3native.h.10FE5A65123B17EE.idx  glx_context.c.E1D2B5263C8B75A5.idx  imconfig.h.074705F969AC6702.idx  imgui.cpp.BF1282A7F39F6822.idx  imgui.h.54B6473723998F19.idx  imgui_demo.cpp.736E57FC3E6D7FE9.idx  imgui_draw.cpp.F38F2585474B12E2.idx  imgui_impl_glfw.cpp.A6B9337A27BFDDCF.idx  imgui_impl_glfw.h.93C1FBB42A6AFCC3.idx  imgui_impl_opengl3.cpp.127B8FC5AE668A5D.idx  imgui_impl_opengl3.h.616ECC91EAD9251A.idx  imgui_internal.h.72481C2AD2C837F4.idx  imgui_tables.cpp.75BAF6A12C594C60.idx  imgui_widgets.cpp.6C629AC4E017983C.idx  imstb_rectpack.h.9C499BBD0CCDCE90.idx  imstb_textedit.h.CDC8DB6E6ADB0702.idx  imstb_truetype.h.9BFB1D8A4DA3E58B.idx  init.c.852D1E3CFADF7261.idx  input.c.7747A936986B95BE.idx  internal.h.2DAE253F1715B869.idx  khrplatform.h.E2063CAB2A311786.idx  linux_joystick.c.99DE2BF9F82507A8.idx  linux_joystick.h.CB0C2B711915F94D.idx  mappings.h.B5D738324EC84012.idx  monitor.c.019B29F696A29D56.idx  null_init.c.2813D4079F24C78B.idx  null_joystick.c.BA8C5D2A665531C3.idx  null_joystick.h.C604D3BBA42C53FF.idx  null_monitor.c.CEA8F7A631BB7E37.idx  null_platform.h.6997504AD22B873A.idx  null_window.c.323B4768C519714D.idx  osmesa_context.c.D7297779FFE08151.idx  platform.c.5CFC1D75AA9C1F87.idx  pointer-constraints-unstable-v1-client-protocol-code.h.E31DF8CFA9D0B698.idx  (+29 more)
Assets/Shaders/: light.shader  test.shader
echo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
echo/.cache/clangd/index/: Application.cpp.F9155400302A3DAD.idx  Application.h.473343E03DA1DAFD.idx  Core.h.4F2A8AFDC705F266.idx  context.c.32E331AAD38149F3.idx  egl_context.c.4A7E9FC573687912.idx  fractional-scale-v1-client-protocol-code.h.61597309BF539A8B.idx  fractional-scale-v1-client-protocol.h.99215C9A0BC8CBD4.idx  glad.c.21E8E5813B0E442E.idx  glfw3native.h.10FE5A65123B17EE.idx  glx_context.c.E1D2B5263C8B75A5.idx  idle-inhibit-unstable-v1-client-protocol-code.h.64A9A1D164D52FE6.idx  idle-inhibit-unstable-v1-client-protocol.h.B8C3B616DDDF93DC.idx  imgui.cpp.BF1282A7F39F6822.idx  imgui.h.54B6473723998F19.idx  imgui_demo.cpp.736E57FC3E6D7FE9.idx  imgui_draw.cpp.F38F2585474B12E2.idx  imgui_impl_glfw.cpp.A6B9337A27BFDDCF.idx  imgui_impl_opengl3.cpp.127B8FC5AE668A5D.idx  imgui_impl_opengl3_loader.h.4015E5B5B7D8F631.idx  imgui_internal.h.72481C2AD2C837F4.idx  imgui_tables.cpp.75BAF6A12C594C60.idx  imgui_widgets.cpp.6C629AC4E017983C.idx  imstb_rectpack.h.9C499BBD0CCDCE90.idx  imstb_truetype.h.9BFB1D8A4DA3E58B.idx  init.c.852D1E3CFADF7261.idx  input.c.7747A936986B95BE.idx  internal.h.2DAE253F1715B869.idx  linux_joystick.c.99DE2BF9F82507A8.idx  monitor.c.019B29F696A29D56.idx  null_init.c.2813D4079F24C78B.idx  null_joystick.c.BA8C5D2A665531C3.idx  null_monitor.c.CEA8F7A631BB7E37.idx  null_window.c.323B4768C519714D.idx  osmesa_context.c.D7297779FFE08151.idx  platform.c.5CFC1D75AA9C1F87.idx  platform.h.4373F7C07C750326.idx  posix_module.c.5B588EC79C9217F8.idx  posix_poll.c.FB822CD73508D7FE.idx  posix_thread.c.93D0A1BD327451BA.idx  posix_thread.h.FA866F12A33B3F21.idx  (+19 more)
echo/src/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  CameraController.cpp  CameraController.h  Core.h  DeltaTime.cpp  DeltaTime.h  Echo.h  EntryPoint.h  InputTemplate.cpp  InputTemplate.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Renderer.cpp  Renderer.h  VertexArray.cpp  VertexArray.h  WindowTemplate.h  ecpch.h  test.cpp  test.h
echo/src/Codes/: KeyCodes.h  MouseCodes.h
echo/src/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
echo/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
echo/src/Platform/Linux/: LinuxInput.cpp  LinuxInput.h  LinuxWindow.cpp  LinuxWindow.h
echo/src/Platform/Opengl/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  imguiRendererOpengl3.cpp
echo/src/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  RenderAPI.cpp  RenderAPI.h  RenderCommand.cpp  RenderCommand.h  RenderContext.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/: main.cpp
